apps/base/photoprism/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  labels:
    lib: mariadb
    role: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      lib: mariadb
      role: mariadb
  template:
    metadata:
      labels:
        lib: mariadb
        role: mariadb
    spec:
      automountServiceAccountToken: false
      containers:
        # documentation: https://hub.docker.com/_/mariadb
        - name: mariadb
          image: mariadb:10.11@sha256:07c0aaff7396b74cb7975cba78257178d188e30f531a5db2b617c48beef13c41

          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 200Mi

          ports:
            - containerPort: 3306
              name: mariadb-port

          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: data

          #securityContext:
          #  runAsNonRoot: true
          #  runAsUser: 1001

          livenessProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  mysqladmin status -uroot -p"${password_aux}"
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1

          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  mysqladmin status -uroot -p"${password_aux}"
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1

      # pod-level securityContext:
      #securityContext:
      #  # patch fsGroup to control the owner of files in the mounted directories.
      #  #   i.e. create a group on the host/node and specify it here to make that group the owner/accessor of the files.
      #  fsGroup: 1001

      # pod-level volumes:
      volumes:
        - name: data
          hostPath:
            path: /PATCH_WITH_KUSTOMIZE # e.g /mnt/thedatapool/app-data/example-app/mariadb-data
